# cubs2

./: .gitignore  CONTRIBUTING.md  Makefile  README.md
.devtools/: .flake8  format_cpp.sh  format_python.sh  pyproject.toml  test-ci-locally.sh
.github/badges/: coverage.json
.github/workflows/: ci.yml  coverage-badge.yml  docs.yml
cubs2_bringup/: CMakeLists.txt  README.md  package.xml
cubs2_bringup/config/: 8bitdo_81hd.yaml  README_gamepad.md  logitech_f310.yaml  sportcub.yaml
cubs2_bringup/launch/: gamepad_control.xml  keyboard_control.xml  planning.xml  sim.xml  viz.xml
cubs2_control/: CMakeLists.txt  README.md  package.xml
cubs2_control/cubs2_control/: autolevel_controller.py  closed_loop.py  gamepad_control.py  pid_controller.py
cubs2_control/test/: test_closed_loop_trim.py  test_composition.py  test_controllers.py
cubs2_data/: CMakeLists.txt  README.md  package.xml
cubs2_data/data/: cub_stabilize_2025_11_13.mcap  download_rosbags.py  download_rosbags.sh  filter_bag.py
cubs2_description/: CMakeLists.txt  README.md  package.xml
cubs2_description/cubs2_description/: pose_to_tf.py
cubs2_description/meshes/: improve_lighting.py  plane.glb
cubs2_description/urdf/: sportcub.urdf.xacro
cubs2_dynamics/: AMENT_LINT_IGNORE  CMakeLists.txt  README.md  package.xml
cubs2_dynamics/cubs2_dynamics/: integrators.py  linearize.py  model.py  sportcub.py  trim_fixed_wing.py
cubs2_dynamics/test/: __init__.py  test_hybrid_features.py  test_linearize.py  test_model.py  test_sportcub.py
cubs2_msgs/: CMakeLists.txt  README.md  package.xml
cubs2_msgs/msg/: AircraftControl.msg
cubs2_planning/: CMakeLists.txt  README.md  package.xml
cubs2_planning/cubs2_planning/: __init__.py  dubins_offset.py  dubins_samples.ipynb  planner_dubins.py  polynomial_offset.ipynb  polynomial_optimization.py  polynomial_optimization_clean.py
cubs2_planning/cubs2_planning/nodes/: planner_dubins.py
cubs2_planning/cubs2_planning/planner/: dubins.py
cubs2_planning/test/: conftest.py  test_planner_dubins.py
cubs2_planning/test/nodes/: test_planner_dubins.py
cubs2_planning/test/planner/: test_dubins.py
cubs2_rviz/: CMakeLists.txt  README.md  package.xml  plugin_description.xml
cubs2_rviz/config/: cubs2.rviz
cubs2_rviz/include/cubs2_rviz/: hud_panel.hpp  joy_panel.hpp  sim_panel.hpp  video_panel.hpp
cubs2_rviz/scripts/: test_video_stream.sh
cubs2_rviz/src/rviz/: hud_panel.cpp  joy_panel.cpp  plugin_description.xml  sim_panel.cpp  video_panel.cpp
cubs2_simulation/: CMakeLists.txt  README.md  package.xml
cubs2_simulation/cubs2_simulation/: __init__.py  markers.py  sim.py
cubs2_simulation/cubs2_simulation/nodes/: gamepad_control.py  pose_to_tf.py  sim.py
cubs2_simulation/test/: test_closed_loop_outputs.py  test_sim.py
cubs2_simulation/test/nodes/: __init__.py  test_closed_loop_outputs.py  test_sim.py
docs/: conf.py  index.rst
docs/api/: control.rst  dynamics.rst  index.rst  planning.rst  simulation.rst
docs/development/: architecture.rst  contributing.rst  testing.rst
docs/user_guide/: control.rst  installation.rst  planning.rst  quickstart.rst  simulation.rst  visualization.rst
racecourse_description/: CMakeLists.txt  README.md  package.xml
racecourse_description/config/: racecourse.yaml
racecourse_description/meshes/: concrete_floor.glb  cube.glb  gate.glb  improve_lighting.py
racecourse_description/racecourse_description/: __init__.py  elements.py  factory.py  loader.py  racecourse_markers.py
racecourse_description/racecourse_description/nodes/: racecourse_markers.py
racecourse_description/test/nodes/: test_racecourse_markers.py
