<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cubs2_bringup</name>
  <version>1.0.0</version>
  <description>Launch files and system configuration for Cubs2</description>
  <maintainer email="james.goppert@gmail.com">James Goppert</maintainer>
  <license>Apache-2.0</license>
  <author email="james.goppert@gmail.com">James Goppert</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>cubs2_simulation</exec_depend>
  <exec_depend>cubs2_planning</exec_depend>
  <exec_depend>cubs2_rviz</exec_depend>
  <exec_depend>racecourse_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
