<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cubs2_control</name>
  <version>1.0.0</version>
  <description>Control algorithms for Cubs2 aircraft</description>
  <maintainer email="james.goppert@gmail.com">James Goppert</maintainer>
  <author email="james.goppert@gmail.com">James Goppert</author>
  <license>Apache-2.0</license>

  <url type="website">https://github.com/jgoppert/cubs2</url>
  <url type="repository">https://github.com/jgoppert/cubs2</url>
  <url type="bugtracker">https://github.com/jgoppert/cubs2/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>cubs2_dynamics</depend>

  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>ament_cmake_flake8</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
