<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cubs2_data</name>
  <version>1.0.0</version>
  <description>Data files for Cubs2 (rosbags, logs, reference data)</description>
  <maintainer email="james.goppert@gmail.com">James Goppert</maintainer>
  <license>Apache-2.0</license>
  <author email="james.goppert@gmail.com">James Goppert</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
