<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cubs2_msgs</name>
  <version>1.0.0</version>
  <description>Message definitions for Cubs2 SportCub aircraft</description>
  <maintainer email="james.goppert@gmail.com">James Goppert</maintainer>
  <license>Apache-2.0</license>
  <author email="james.goppert@gmail.com">James Goppert</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
