<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cubs2_rviz</name>
  <version>1.0.0</version>
  <description>RViz panel plugins for Cubs2 aircraft simulation</description>
  <maintainer email="james.goppert@gmail.com">James Goppert</maintainer>
  <author email="james.goppert@gmail.com">James Goppert</author>
  <license>Apache-2.0</license>

  <url type="website">https://github.com/jgoppert/cubs2</url>
  <url type="repository">https://github.com/jgoppert/cubs2</url>
  <url type="bugtracker">https://github.com/jgoppert/cubs2/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rviz_common</depend>
  <depend>pluginlib</depend>
  <depend>cubs2_msgs</depend>
  <depend>cubs2_description</depend>
  <depend>racecourse_description</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>gstreamer1.0-plugins-base</exec_depend>
  <exec_depend>gstreamer1.0-plugins-good</exec_depend>
  <exec_depend>gstreamer1.0-plugins-bad</exec_depend>
  <exec_depend>gstreamer1.0-plugins-ugly</exec_depend>
  <exec_depend>gstreamer1.0-libav</exec_depend>



  <export>
    <build_type>ament_cmake</build_type>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
