<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cubs2_rviz</name>
  <version>1.0.0</version>
  <description>RViz panel plugins for Cubs2 aircraft simulation</description>
  <maintainer email="james.goppert@gmail.com">James Goppert</maintainer>
  <license>Apache-2.0</license>
  <author email="james.goppert@gmail.com">James Goppert</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rviz_common</depend>
  <depend>pluginlib</depend>
  <depend>cubs2_msgs</depend>
  <depend>cubs2_description</depend>
  <depend>racecourse_description</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <depend>libgstreamer1.0-dev</depend>
  <depend>libgstreamer-plugins-base1.0-dev</depend>

  <exec_depend>gstreamer1.0-plugins-base</exec_depend>
  <exec_depend>gstreamer1.0-plugins-good</exec_depend>
  <exec_depend>gstreamer1.0-plugins-bad</exec_depend>
  <exec_depend>gstreamer1.0-plugins-ugly</exec_depend>
  <exec_depend>gstreamer1.0-libav</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
